homepage text changes and ad placements

--- a/base-css.html
+++ b/base-css.html
@@ -136,7 +136,7 @@ Apache License: v2.0. http://www.apache.org/licenses/LICENSE-2.0
 			    <li><a href="#media-queries">Media Queries <i class="icon-chevron-right alignright"></i></a></li>
 			</ul>
 		</div>
-	<section class="information eleven columns alt-spacing">
+	<section class="information nine columns">
 		<section class="doc-section" id="columns-and-margins">
 		<h3>Columns and Margins</h3>
 		<p>The grid is formatted to allow the grid columns to float inline with each other. Wrap an inline grid with a class of <i>.row</i>. Then add whatever columns you want to make sixteen. The base spacing between each column is 2%. In some cases, like a three column situation, the numbers won't add up to sixteen. In this case, give the second and third column divs a class of <i>.alt-spacing</i></p>
@@ -232,17 +232,16 @@ Apache License: v2.0. http://www.apache.org/licenses/LICENSE-2.0
 		</section>
 		<p class="top"><a href="#top"><i class="icon-hand-up"></i> Top</a></p>
 	</section>
-				
+				<div class="callout ads three columns alignright clearfix">
+					<h5>Proudly Sponsored by</h5>
+					<!-- AdPacks.com Zone Code -->
+					<div id="bsap_1277196" class="bsarocks bsap_991a376ef1e7767477b39694cfa817c9 clearfix"></div>
+					<!-- End AdPacks.com Zone Code -->
+					<a href="http://adpacks.com" id="bsap_aplink">via Ad Packs</a>
+					</div>
       		</div><!-- content -->	
       		<footer role="contentinfo">
 		<section class="container row clearfix">
-	<div class="ads four columns">
-		<!-- AdPacks.com Zone Code -->
-		<div id="bsap_1277196" class="bsarocks bsap_991a376ef1e7767477b39694cfa817c9 clearfix"></div>
-		<!-- End AdPacks.com Zone Code -->
-		<a href="http://adpacks.com" id="bsap_aplink">via Ad Packs</a>
-
-	</div>
 		<div class="eight columns alt-spacing">
 			<p>Wirefy is maintained by <a href="http://chrisdasie.com">Chris Da Sie</a>. Licensed under the <a href="http://www.apache.org/licenses/LICENSE-2.0">Apache License</a>, Version 2.0. The Font Awesome web font, CSS files and JS files are licensed under <a href="http://creativecommons.org/licenses/by/3.0/">CC BY 3.0</a>.</p>
 			<p>Copyright © 2012 Wirefy. Hosted by GitHub. Branding by Chris Da Sie. Built on Wirefy</p>
