--- a/features.html
+++ b/features.html
@@ -143,7 +143,7 @@ Apache License: v2.0. http://www.apache.org/licenses/LICENSE-2.0
 				<li><a href="#forms">Forms <i class="icon-chevron-right alignright"></i></a></li>
 			</ul>
 		</aside>
-	<section class="information eleven columns alt-spacing">
+	<section class="information nine columns">
 		<section class="doc-section" id="grid">
 		<h3>The Grid</h3>
 		<p>The base grid has 16 columns and is based on a 960 grid system. Unlike most grid systems, each column based on percentages rather than pixel dimensions. The syntax is simple and it's effective cross browser, but the best part is that it has a lot of flexibility to fit any viewport size, current or future.</p>
@@ -892,17 +892,18 @@ Apache License: v2.0. http://www.apache.org/licenses/LICENSE-2.0
 	
 	<p class="top"><a href="#top"><i class="icon-hand-up"></i> Top</a></p>
 	</section><!-- information -->
+	
+	<div class="callout ads three columns alignright clearfix">
+		<h5>Proudly Sponsored by</h5>
+		<!-- AdPacks.com Zone Code -->
+		<div id="bsap_1277196" class="bsarocks bsap_991a376ef1e7767477b39694cfa817c9 clearfix"></div>
+		<!-- End AdPacks.com Zone Code -->
+		<a href="http://adpacks.com" id="bsap_aplink">via Ad Packs</a>
+		</div>
 				
       		</div><!-- content -->	
       		<footer role="contentinfo">
 		<section class="container row clearfix">
-	<div class="ads four columns">
-		<!-- AdPacks.com Zone i -->
-		<div id="bsap_1277196" class="bsarocks bsap_991a376ef1e7767477b39694cfa817c9 clearfix"></div>
-		<!-- End AdPacks.com Zone i -->
-		<a href="http://adpacks.com" id="bsap_aplink">via Ad Packs</a>
-
-	</div>
 		<div class="eight columns alt-spacing">
 			<p>Wirefy is maintained by <a href="http://chrisdasie.com">Chris Da Sie</a>. Licensed under the <a href="http://www.apache.org/licenses/LICENSE-2.0">Apache License</a>, Version 2.0. The Font Awesome web font, CSS files and JS files are licensed under <a href="http://creativecommons.org/licenses/by/3.0/">CC BY 3.0</a>.</p>
 			<p>Copyright © 2012 Wirefy. Hosted by GitHub. Branding by Chris Da Sie. Built on Wirefy</p>
