--- a/getting-started.html
+++ b/getting-started.html
@@ -125,20 +125,22 @@ Apache License: v2.0. http://www.apache.org/licenses/LICENSE-2.0
 				<h1 class="float-up">Getting Started</h1>
 				<h3 class="float-up">Get up and running faster</h3>
 			  </div>
+			
 		</div>
 	 	  </section>
 		
 			
-    <div role="main" class="content row clearfix">
+    <div role="main" class="content row">
 		<div class="four columns" id="sidebar">
-		  	<ul>
+		  	<ul class="row">
 			    <li><a href="#download">Download <i class="icon-chevron-right alignright"></i></a></li>
 			    <li><a href="#file-structure">File Structure <i class="icon-chevron-right alignright"></i></a></li>
 				<li><a href="#html-template">HTML Template <i class="icon-chevron-right alignright"></i></a></li>
 				<li><a href="#extend">Extend <i class="icon-chevron-right alignright"></i></a></li>
 			</ul>
 		</div>
-	<section class="information eleven columns alt-spacing">
+		
+	<section class="information nine columns">
 		<section class="doc-section" id="download">
 		<h3>Download</h3>
 		<p>Before you download the latest version of Wirefy, make sure you have a code editor available. We recommend TextMate or Coda2. You will also need some working knowledge of HTML and CSS. Ok now that we have that settled let's get started. We've strived to keep Wirefy as compact as possible and continue to work on techniques to better our compression. Currently the entire document is just under ~300Kb zipped.</p>
@@ -165,17 +167,19 @@ Apache License: v2.0. http://www.apache.org/licenses/LICENSE-2.0
 		</section>
 		<p class="top"><a href="#top"><i class="icon-hand-up"></i> Top</a></p>
 		</section>
+		
+		<div class="callout ads three columns alignright clearfix">
+			<h5>Proudly Sponsored by</h5>
+			<!-- AdPacks.com Zone Code -->
+			<div id="bsap_1277196" class="bsarocks bsap_991a376ef1e7767477b39694cfa817c9 clearfix"></div>
+			<!-- End AdPacks.com Zone Code -->
+			<a href="http://adpacks.com" id="bsap_aplink">via Ad Packs</a>
+
+		</div>
  		
 			</div><!-- content -->	
       		<footer role="contentinfo">
 		<section class="container row clearfix">
-	<div class="ads four columns">
-		<!-- AdPacks.com Zone Code -->
-		<div id="bsap_1277196" class="bsarocks bsap_991a376ef1e7767477b39694cfa817c9 clearfix"></div>
-		<!-- End AdPacks.com Zone Code -->
-		<a href="http://adpacks.com" id="bsap_aplink">via Ad Packs</a>
-
-	</div>
 		<div class="eight columns alt-spacing">
 			<p>Wirefy is maintained by <a href="http://chrisdasie.com">Chris Da Sie</a>. Licensed under the <a href="http://www.apache.org/licenses/LICENSE-2.0">Apache License</a>, Version 2.0. The Font Awesome web font, CSS files and JS files are licensed under <a href="http://creativecommons.org/licenses/by/3.0/">CC BY 3.0</a>.</p>
 			<p>Copyright © 2012 Wirefy. Hosted by GitHub. Branding by Chris Da Sie. Built on Wirefy</p>
