--- a/index.html
+++ b/index.html
@@ -142,17 +142,26 @@ Apache License: v2.0. http://www.apache.org/licenses/LICENSE-2.0
     <div role="main" class="content clearfix">
 	  <section class="doc-section summary row">
 		<div class="row">
-		<div class="homepage-callout five columns">
-		<h3>What is it?</h3>
-		<p>Wirefy is a browser based responsive wireframe tool, which allows you to create functional wireframes using standard elements. Think of it as the foundation for your content to be built on. This allows you to focus on the content rather than the design to get faster sign off. Wirefy is not a one-solution answer.</p>
-		</div>
-			<div class="homepage-callout five columns alt-spacing">
-			<h3>Who is for?</h3>
-			<p>For anyone who is concerned with designing with content first as the base for their responsive design. If you are new to responsive design, this tool will help you get up and running faster. Start building flexible wireframes without the headache of working through countless calculations. Instead focus on the content and flow.</p>
-			</div>
-				<div class="homepage-callout five columns alt-spacing">
-				<h3>Why use it?</h3>
-				<p>Creating static wireframes can be great but sometimes clients just don't understand how they function or change based on various devices. Building functional wireframes will help you communicate with clients better and work as a foundation for your fluid designs without losing sight of the importance of the content.</p>
+		<div class="homepage-callout ten columns">
+		<h1>What is Wirefy?</h1>
+		<p>Wirefy is a style agnostic wireframe tool built on the principles of content first. It allows you to create functional responsive 
+			wireframes using standard elements. Many frameworks focus on quick layouts and base styles. This allows you to focus on the content 
+			rather than the subjective design decisions.</p>
+			<p>If you are a designer and developer that is concerned with content first at the base of your responsive designs then Wirefy 
+				is the tool you've looking for. With a bit of base knowledge of HTML and CSS, you can start building flexible wireframes 
+				without the headache of working through countless calculations.</p>
+				<p>Creating static wireframes can be great but sometimes clients just don't understand how they function or change 
+					based on various devices. Building functional wireframes will help you communicate with clients better and work 
+					as a foundation for your fluid designs without losing sight of the importance of the content.</p>
+					<a href="getting-started.html" class="button large">Let's get started</a>
+				</div>
+				<div class="callout ads five columns alt-spacing clearfix">
+					<h5>Proudly Sponsored by</h5>
+					<!-- AdPacks.com Zone Code -->
+					<div id="bsap_1277196" class="bsarocks bsap_991a376ef1e7767477b39694cfa817c9 clearfix"></div>
+					<!-- End AdPacks.com Zone Code -->
+					<a href="http://adpacks.com" id="bsap_aplink">via Ad Packs</a>
+
 				</div>
 		</div>
 		</section>
@@ -174,13 +183,6 @@ Apache License: v2.0. http://www.apache.org/licenses/LICENSE-2.0
 		</div><!-- content -->
       	<footer role="contentinfo">
 	<section class="container row">
-<div class="ads four columns">
-	<!-- AdPacks.com Zone Code -->
-	<div id="bsap_1277196" class="bsarocks bsap_991a376ef1e7767477b39694cfa817c9 clearfix"></div>
-	<!-- End AdPacks.com Zone Code -->
-	<a href="http://adpacks.com" id="bsap_aplink">via Ad Packs</a>
-
-</div>
 	<div class="eight columns alt-spacing">
 <p>Wirefy is maintained by <a href="http://chrisdasie.com">Chris Da Sie</a>. Licensed under the <a href="http://www.apache.org/licenses/LICENSE-2.0">Apache License</a>, Version 2.0. The Font Awesome web font, CSS files and JS files are licensed under <a href="http://creativecommons.org/licenses/by/3.0/">CC BY 3.0</a>.</p>
 <p>Copyright © 2012 Wirefy. Hosted by GitHub. Branding by Chris Da Sie. Built on Wirefy</p>
