minor button fix

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@ Apache License: v2.0. http://www.apache.org/licenses/LICENSE-2.0
 				<p>Creating static wireframes can be great but sometimes clients just don't understand how they function or change 
 					based on various devices. Building functional wireframes will help you communicate with clients better and work 
 					as a foundation for your fluid designs without losing sight of the importance of the content.</p>
-					<a href="getting-started.html" class="button large">Let's get started</a>
+					<a href="getting-started.html" class="button large">Let's get started <i class="icon-chevron-right"></i></a>
 				</div>
 				<div class="callout ads five columns alt-spacing clearfix">
 					<h5>Proudly Sponsored by</h5>
