--- a/ask-a-question.html
+++ b/ask-a-question.html
@@ -94,7 +94,7 @@ Apache License: v2.0. http://www.apache.org/licenses/LICENSE-2.0
 	<h2>Wirefy</h2>
 	</a>
 	</div>
-	  <div class='menu-button'></div>
+	  <div class="menu-button">Menu</div>
 	  <a href="#main" class="skip">Skip navigation</a>
 	  <nav role="navigation" id="nav">
 	    <ul>
@@ -162,6 +162,9 @@ Apache License: v2.0. http://www.apache.org/licenses/LICENSE-2.0
   <script src="js/plugins.js"></script>
   <script src="js/script.js"></script>
   <script src="js/helper.js"></script>
+	<script>
+	$("[role='navigation']").flexNav();
+	</script>
   
   
   <!-- Asynchronous Google Analytics snippet. Change UA-XXXXX-X to be your site's ID.
