--- a/base-css.html
+++ b/base-css.html
@@ -104,12 +104,12 @@ Apache License: v2.0. http://www.apache.org/licenses/LICENSE-2.0
 	<h2>Wirefy</h2>
 	</a>
 	</div>
-	  <div class='menu-button'></div>
+	  <div class="menu-button">Menu</div>
 	  <a href="#main" class="skip">Skip navigation</a>
 	  <nav role="navigation" id="nav">
 	    <ul>
 		  <li class="top-level"><a href="getting-started.html">Getting Started</a></li>
-		  <li class="top-level"><a href="features.html">Features</a></li>
+		  <li class="top-level "><a href="features.html">Features</a></li>
 		  <li class="top-level active"><a href="base-css.html">Base CSS</a></li>
 		  <li class="top-level"><a href="ask-a-question.html">Ask A Question</a></li>
 	    </ul>	
@@ -278,6 +278,9 @@ Apache License: v2.0. http://www.apache.org/licenses/LICENSE-2.0
 			function() {
 				$(this).html(originalText);
 			})
+	</script>
+	<script>
+	$("[role='navigation']").flexNav();
 	</script>
   
   
