--- a/getting-started.html
+++ b/getting-started.html
@@ -106,7 +106,7 @@ Apache License: v2.0. http://www.apache.org/licenses/LICENSE-2.0
 	<h2>Wirefy</h2>
 	</a>
 	</div>
-	  <div class='menu-button'></div>
+	  <div class="menu-button">Menu</div>
 	  <a href="#main" class="skip">Skip navigation</a>
 	  <nav role="navigation" id="nav">
 	    <ul>
@@ -217,6 +217,10 @@ Apache License: v2.0. http://www.apache.org/licenses/LICENSE-2.0
 			function() {
 				$(this).html(originalText);
 			})
+	</script>
+	
+	<script>
+	$("[role='navigation']").flexNav();
 	</script>
   
   
