--- a/index.html
+++ b/index.html
@@ -87,15 +87,22 @@ will help you write and rewrite the SCSS files.
 	  <div class="logo">
 	    <h1>Wirefy</h1>
 	  </div>
-	  <div class="menu-button"></div>
+	  <div class="menu-button">Menu</div>
 	  <a href="#main" class="skip">Skip navigation</a>
-	  <nav role="navigation" id="nav">
+	  <nav role="navigation" id="nav" class="toggle">
 	    <ul>
-		  <li class="top-level"><a href="#">Sample 1</a></li>
-		  <li class="top-level"><a href="#">Sample 2</a></li>
-		  <li class="top-level"><a href="#">Sample 3</a></li>
-		  <li class="top-level"><a href="#">Sample 4</a></li>
-		  <li class="top-level"><a href="#">Sample 5</a></li>
+		  <li class="top-level item-with-ul"><a href="" class="link-with-ul">Sample 1</a>
+			<ul class="sub-menu">
+				<li><a href="">Submenu item 1</a></li>
+				<li><a href="">Submenu item 2</a></li>
+				<li><a href="">Submenu item 3</a></li>
+				<li><a href="">Submenu item 4</a></li>
+			</ul>
+		</li>
+		  <li class="top-level"><a href="">Sample 2</a></li>
+		  <li class="top-level"><a href="">Sample 3</a></li>
+		  <li class="top-level"><a href="">Sample 4</a></li>
+		  <li class="top-level"><a href="">Sample 5</a></li>
 	    </ul>	
       </nav>
     </header>
