--- a/index.html
+++ b/index.html
@@ -20,9 +20,12 @@ Apache License: v2.0. http://www.apache.org/licenses/LICENSE-2.0
  <!-- Basic Page Needs
 ================================================= -->
  <meta charset="utf-8">
+ <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
  <title>Wirefy | The Responsive Wireframe Boilerplate</title>
  <meta name="description" content="">
  <meta name="author" content="">
+
+
  
  
  <!-- Mobile Specific Metas
@@ -61,6 +64,12 @@ will help you write and rewrite the SCSS files.
 
 </head>
 <body>
+	<!--[if lt IE 7]>
+        <p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> to improve your experience.</p>
+    <![endif]-->
+	
+	
+  <!-- Remove any content below that is not needed. Begin adding your site or application content here -->
   <div class="container clearfix">
   <!-- This is the header information. You can add things like logos and navigation here. -->
     <header role="banner" class="clearfix">
