--- a/base-css.html
+++ b/base-css.html
@@ -51,24 +51,30 @@ Apache License: v2.0. http://www.apache.org/licenses/LICENSE-2.0
  <!-- Favicon
  ================================================== -->
  <!-- For iPhone 4 -->
- <!-- <link rel="apple-touch-icon-precomposed" sizes="114x114" href="img/h/apple-touch-icon.png"> -->
+ <link rel="apple-touch-icon-precomposed" sizes="114x114" href="img/h/apple-touch-icon.png"> 
  <!-- For iPad 1-->
- <!-- <link rel="apple-touch-icon-precomposed" sizes="72x72" href="img/m/apple-touch-icon.png"> -->
+ <link rel="apple-touch-icon-precomposed" sizes="72x72" href="img/m/apple-touch-icon.png"> 
  <!-- For the new iPad -->
- <!-- <link rel="apple-touch-icon-precomposed" sizes="144x144" href="img/h/apple-touch-icon-144x144-precomposed.png">-->
+ <link rel="apple-touch-icon-precomposed" sizes="144x144" href="img/h/apple-touch-icon-144x144-precomposed.png">
  <!-- For iPhone 3G, iPod Touch and Android -->
- <!-- <link rel="apple-touch-icon-precomposed" href="img/l/apple-touch-icon-precomposed.png"> -->
+ <link rel="apple-touch-icon-precomposed" href="img/l/apple-touch-icon-precomposed.png"> 
  <!-- For Nokia -->
- <!-- <link rel="shortcut icon" href="img/l/apple-touch-icon.png"> -->
+ <link rel="shortcut icon" href="img/l/apple-touch-icon.png"> 
  <!-- For everything else -->
  <link rel="shortcut icon" href="img/startup/favicon.ico">
 
- <!--iOS -->
- <!-- <meta name="apple-mobile-web-app-capable" content="yes"> -->
- <!-- <meta name="apple-mobile-web-app-status-bar-style" content="black"> -->
- <!-- <link rel="apple-touch-startup-image" href="img/splash.png"> -->
+<!-- Windows 8 startup screen
+ ================================================== -->
+<meta name="application-name" content="Wirefy | The Responsive Wireframe Framework"/> 
+<meta name="msapplication-TileColor" content="#111111"/> 
+<meta name="msapplication-TileImage" content="img/22905266-8309-4b75-aa81-6d270415e8d7.png"/>
 
- <!-- <script>(function(){var p,l,r=window.devicePixelRatio;if(navigator.platform==="iPad"){p=r===2?"img/startup/startup-tablet-portrait-retina.png":"img/startup/startup-tablet-portrait.png";l=r===2?"img/startup/startup-tablet-landscape-retina.png":"img/startup/startup-tablet-landscape.png";document.write('<link rel="apple-touch-startup-image" href="'+l+'" media="screen and (orientation: landscape)" ><link rel="apple-touch-startup-image" href="'+p+'" media="screen and (orientation: portrait)" >');}else{p=r===2?"img/startup/startup-retina.png":"img/startup/startup.png";document.write('<link rel="apple-touch-startup-image" href="'+p+'" >');}})()</script> -->
+ <!--iOS -->
+ <meta name="apple-mobile-web-app-capable" content="yes"> 
+ <meta name="apple-mobile-web-app-status-bar-style" content="black"> 
+ <link rel="apple-touch-startup-image" href="img/splash.png"> 
+
+ <script>(function(){var p,l,r=window.devicePixelRatio;if(navigator.platform==="iPad"){p=r===2?"img/startup/startup-tablet-portrait-retina.png":"img/startup/startup-tablet-portrait.png";l=r===2?"img/startup/startup-tablet-landscape-retina.png":"img/startup/startup-tablet-landscape.png";document.write('<link rel="apple-touch-startup-image" href="'+l+'" media="screen and (orientation: landscape)" ><link rel="apple-touch-startup-image" href="'+p+'" media="screen and (orientation: portrait)" >');}else{p=r===2?"img/startup/startup-retina.png":"img/startup/startup.png";document.write('<link rel="apple-touch-startup-image" href="'+p+'" >');}})()</script> 
  <!--Microsoft -->
 
  <!-- Prevents links from opening in mobile Safari -->
