Better typography modular scale

--- a/index.html
+++ b/index.html
@@ -35,7 +35,6 @@ Apache License: v2.0. http://www.apache.org/licenses/LICENSE-2.0
  <!-- CSS - These are your main CSS files. All base styles can be found in the base.css and any additional styles 
  or overwrites should be used in the layout.css. We have now added support for SCSS. Using CodeKit or a similar preprocessor will help you write and rewrite the SCSS files.  
 ================================================= -->
- <link rel="stylesheet" href="css/base.css"> <!-- Compressed and compiled from base.scss -->
  <link rel="stylesheet" href="css/layout.css"> <!-- Compiled from layout.scss -->
  
  <!-- Browser Specific Javascript
@@ -77,6 +76,18 @@ Apache License: v2.0. http://www.apache.org/licenses/LICENSE-2.0
   of content is not design, it's decoration." -->
 			
   <div role="main" class="content">
+	<h1>H1</h1>
+	<h2>H2</h2>
+	<h3>H3</h3>
+	<h4>H4</h4>
+	<h5>H5</h5>
+	<h6>H6</h6>
+	<p>As Jeffery Zeldman once said, "Content precedes design. Design in the absence 
+	  of content is not design, it's decoration."	As Jeffery Zeldman once said, "Content precedes design. Design in the absence 
+		  of content is not design, it's decoration."As Jeffery Zeldman once said, "Content precedes design. Design in the absence 
+		  of content is not design, it's decoration."As Jeffery Zeldman once said, "Content precedes design. Design in the absence 
+		  of content is not design, it's decoration."As Jeffery Zeldman once said, "Content precedes design. Design in the absence 
+		  of content is not design, it's decoration."</p>
   </div>
 	
   <!-- This is you can place your footer information like menu links, contact information, etc -->		
