CSS animations and IE styles

--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@ Apache License: v2.0. http://www.apache.org/licenses/LICENSE-2.0
 
  <!--[if (lt IE 9) & (!IEMobile)]>
  <script src="js/vendor/selectivizr-min.js"></script>
+ <link rel="stylesheet" href="css/base-ie.css">
+ <link rel="stylesheet" href="css/layout-ie.css">
  <![endif]-->
 
 <!-- Prevents links from opening in mobile Safari -->
