--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@ Apache License: v2.0. http://www.apache.org/licenses/LICENSE-2.0
   of content is not design, it's decoration." -->
 			
   <div role="main" class="content">
+	<p>Something very very interesting being written here.</p>
   </div>
 	
   <!-- This is you can place your footer information like menu links, contact information, etc -->		
