--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ Apache License: v2.0. http://www.apache.org/licenses/LICENSE-2.0
  or overwrites should be used in the layout.css. We have now added support for SCSS. Using CodeKit or a similar preprocessor will help you write and rewrite the SCSS files.  
 ================================================= -->
  <!-- <link rel="stylesheet" href="css/font-awesome-ie7.min.css"> -->
- <link rel="stylesheet" href="css/layout.css"> <!-- Compiled from layout.scss -->
+ <link rel="stylesheet" href="css/wirefy.css"> <!-- Compiled from layout.scss -->
  
  <!-- Browser Specific Javascript
 ================================================= -->
@@ -96,7 +96,7 @@ Apache License: v2.0. http://www.apache.org/licenses/LICENSE-2.0
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
   <script>window.jQuery || document.write('<script src="js/vendor/jquery.min.js"><\/script>')</script>
   <script src="js/plugins.min.js"></script>
-  <script src="js/script.js"></script>
+  <script src="js/wirefy.js"></script>
   <script src="js/helper.js"></script>
   
   
