--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ description: Build intuitive, powerful wireframes for smarter web development
   <p>Use Wirefy to build prototypes quickly, then without starting from scratch implement your Wirefy foundation into any additional framework or CMS system for a fully designed deliverable.
 <h3>Getting started</h3>
   <p>To get started with Wirefy quickly, you can either clone or download the git repository</p>
-  <p>To clone the repository on a Mac, Open terminal and run <pre>$ git clone git://github.com/cjdsie/pattern-portfolio.git</pre> If you are unsure about how to clone a git repository then simple click on the download link below.</p>
+  <p>To clone the repository on a Mac, Open terminal and run <pre>$ git clone git://github.com/cjdsie/wirefy.git</pre> If you are unsure about how to clone a git repository then simple click on the download link below.</p>
   <button href="https://github.com/cjdsie/pattern-portfolio/zipball/master">Download the latest</button>
   <p>This framework using <a href="http://nodejs.org/">Node.js</a>, <a href="https://www.npmjs.org/">NPM (Node Package Manager)</a>, and <a href="http://gruntjs.com/">Grunt.js</a> to manage the code in this repo. To preview code locally, you'll need to install Node and NPM, then run the following commands from a terminal window, in the repo directory: 
 <pre>
