--- a/ui-elements.html
+++ b/ui-elements.html
@@ -124,9 +124,9 @@ description: No prototype is complete without ui elements. A collection of those
         <p>Tabs that have dead simple jQuery that will hook them up to their corresponding content.</p>
 		<h5>HTML</h5>
 		<pre><code class="language-markup">&lt;ul class="tabs">
-  &lt;li><a class="active" href="#simple">Simple&lt;/a>&lt;/li>
-  &lt;li><a href="#lightweight">Light</a></li>
-  &lt;li><a href="#mobileFriendly">Mobile</a></li>
+  &lt;li>&lt;a class="active" href="#simple">Simple&lt;/a>&lt;/li>
+  &lt;li>&lt;a href="#lightweight">Light&lt;/a>&lt;/li>
+  &lt;li>&lt;a href="#mobileFriendly">Mobile&lt;/a>&lt;/li>
 &lt;/ul>
 &lt;ul class="tabs-content">
   &lt;li class="active" id="simple">The tabs are clean and simple unordered-list markup and basic CSS.&lt;/li>
