refactored scss code through scsslint

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ MIT License
 
   <!-- This is the header information. You can add things like logos and navigation here. -->
   <header role="banner">
-    <nav role="navigation">
+    <nav role="navigation" class="nav-collapse">
     </nav>
   </header>
 			
